add github actions and authentication migrations
